@@ -1,3 +1,22 @@
+#@PYJS_FULL_OVERRIDE
+from __pyjamas__ import JS
+from pyjamas.Location import Location
+closingListeners = None
+resizeListeners = None
+location = None
+
+def getTitle():
+    return JS('$doc.title')
+
+def getLocation():
+    global location
+    if not location:
+        location = Location(JS('$wnd.location'))
+    return location
+
+def setLocation(url):
+    w = JS('$wnd')
+    w.location = url
 
 def getClientHeight():
     return JS('$wnd.innerHeight')
@@ -13,6 +32,51 @@ def setOnError(onError):
         return onError(msg, url, linenumber);
     }
     """)
+
+def fireClosingImpl():
+    ret = None
+    for listener in closingListeners:
+        msg = listener.onWindowClosing()
+        if ret is None:
+            ret = msg
+    return ret
+
+def fireResizedAndCatch(handler):
+    # FIXME - need implementation
+    pass
+
+def fireResizedImpl():
+    for listener in resizeListeners:
+        listener.onWindowResized(getClientWidth(), getClientHeight())
+
+# TODO: call fireClosedAndCatch
+def onClosed():
+    fireClosedImpl()
+
+# TODO: call fireClosingAndCatch
+def onClosing():
+    fireClosingImpl()
+
+# TODO: call fireResizedAndCatch
+def onResize():
+    fireResizedImpl()
+
+def fireClosedAndCatch(handler):
+    # FIXME - need implementation
+    pass
+
+def fireClosedImpl():
+    for listener in closingListeners:
+        listener.onWindowClosed()
+
+def fireClosingAndCatch(handler):
+    # FIXME - need implementation
+    pass
+
+def resize(width, height):
+    print "resize", width, height
+    wnd().resize_to(width, height)
+    wnd().resize_by(width, height)
 
 def onError(msg, url, linenumber):
     dialog=doc().createElement("div")
@@ -62,4 +126,6 @@ def init():
     );
     """)
     setOnError(onError)
+
+init()
 
