@@ -1,6 +1,14 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * added flag handling to overrides for translator, see
+   translator.txt. it is now possible to override a whole
+   module. which is now actually used for pyjamas.Window so we do not
+   need to build gtk.py for browser, which saves about 400k of
+   generated code if pyjamas.Window is used. in the future we should
+   add more such flags for overrides and get rid of all the "if
+   sys.platform.." stuff.
+
  * fixed pyjamas.Window.getClientWidth/Height on IE. removed
    conditionals from __browser__ implementation in those functions.
 
